# Start-Kit

./: .gitignore  AGENTS.md  CMakeLists.txt  Changelog.md  Debug_and_Visualise_Your_Planner.md  Dockerfile  Evaluation_Environment.md  Input Output Format.md  Input_Output_Format.md  Prepare Your Planner.md  Prepare_Your_Planner.md  Prepare_Your_Submission.md  Python_Interface.md  README.md  RunInDocker.sh  Submission Instruction.md  Submission_Instruction.md  Working_with_Preprocessed_Data.md  apt.txt  compile.sh  config.json  count.py  lifelong  map_produce.py  pip.txt  plot.ipynb  setup.py  simple_output_New.json  task_trend.txt  task_trend_maze_100.txt  task_trend_maze_200.txt  task_trend_maze_300.txt  task_trend_room_1000.txt  task_trend_room_1000_150_delay.txt  task_trend_room_1000_150_delay_2_task.txt  task_trend_room_1000_30_delay.txt  test.json  test_128.json  test_32.json  test_32_1000ticks.json  (+4 more)
build-no-viz/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lifelong  multi_step_plan_test
default_planner/: Memory.h  TrajLNS.h  Types.h  const.h  default_executor.cpp  default_executor.h  flow.cpp  flow.h  heap.h  heuristics.cpp  heuristics.h  pibt.cpp  pibt.h  planner.cpp  planner.h  scheduler.cpp  scheduler.h  search.cpp  search.h  search_node.h  utils.cpp  utils.h
example_problems/: example_from_main_round_manifest.json
example_problems/city.domain/: bos-example_600.json  paris_1000.json  paris_10000.json  paris_1600.json  paris_1_256_250.json  paris_200.json  paris_2000.json  paris_300.json  paris_3000.json  paris_3200.json  paris_400.json  paris_500.json  paris_5000.json  paris_6400.json  paris_800.json  paris_8000.json
example_problems/game.domain/: brc202d_1000.json  brc202d_200.json  brc202d_2000.json  brc202d_300.json  brc202d_3000.json  brc202d_400.json  brc202d_500.json  brc202d_5000.json  brc202d_8000.json  orz-example_1800.json
example_problems/iron_harvest.domain/: iron-example_10000.json  ironHarvestTest_10000.json  ironHarvest_10000.json  log_new.txt
example_problems/iron_harvest_problems/: ironHarvestTest_100.json  ironHarvestTest_1000.json  ironHarvestTest_200.json  ironHarvestTest_300.json  ironHarvestTest_sp_sax_04_100.json  ironHarvestTest_sp_sax_04_1000.json  ironHarvestTest_sp_sax_04_10000.json  ironHarvestTest_sp_sax_04_200.json  ironHarvestTest_sp_sax_04_300.json  ironHarvestTest_sp_sax_04_500.json  ironHarvestTest_sp_sax_04_5000.json
example_problems/maze.domain/: maze-128-128-1_100.json  maze-128-128-1_1000.json  maze-32-32-2_100.json  maze-32-32-2_200.json  maze-32-32-2_300.json  maze-example_40.json
example_problems/random.domain/: random-example_400.json  randomTest_100.json  randomTest_200.json  randomTest_300.json  randomTest_400.json  randomTest_500.json  randomTest_600.json  randomTest_700.json  randomTest_800.json  random_100.json  random_20.json  random_200.json  random_32_32_20_100.json  random_400.json  random_50.json  random_600.json  random_800.json
example_problems/room.domain/: room-64-64-16_1000.json  room-example_150.json  room-example_250.json
example_problems/warehouse.domain/: fulfill-example_2500.json  sortationTest_10000.json  sortationTest_2000.json  sortationTest_20000.json  sortationTest_4000.json  sortationTest_6000.json  sortationTest_8000.json  sortation_large_1200.json  (+43 more)
exp/: error.txt  output.json  output1.json  output2.json  test_actual.txt  test_planner.txt
inc/: ActionModel.h  ActionSimulator.hpp  BasicSystem.h  CompetitionGraph.h  CompetitionSystem.h  Coordinator.hpp  Counter.h  Delay.h  DelayGenerator.h  Entry.h  Evaluation.h  ExecutionSimulator.h  Executor.h  FreeState.h  Grid.h  Logger.h  MAPFPlanner.h  MAPFSolver.h  Plan.h  ScheduleTable.hpp  SharedEnv.h  Simulator.h  States.h  Status.hpp  TaskManager.h  TaskScheduler.h  Tasks.h  Types.h  Validator.h  VisualizerRecorder.h  WHCAStar.h  common.h  delayGenerator.h  execution_policy.h  flow.hpp  heuristics.hpp  pibt.hpp  planner_wrapper.h  task_assigner.h  utils.hpp
maps/: Map File Format.md  input.json  kiva.map  kiva_agents.txt  kiva_agents2.txt  kiva_agents3.txt  kiva_tasks.txt  kiva_tasks2.txt  kiva_tasks3.txt  office.agents  office.json  office.map  office.tasks  office_10.tasks  office_random_10.json  office_swaps.json  office_swaps.tasks  single.json  single.tasks  tasks.txt  tasks_2.txt  tasks_room.txt  triple.agents  triple.json  triple.tasks
proposal/: simulation_time.json
python/: CMakeCache.txt  CMakeLists.txt  MAPFbinding.cpp  Makefile  cmake_install.cmake  pyEntry.hpp  pyEnvironment.hpp  pyMAPFPlanner.cpp  pyMAPFPlanner.hpp  pyMAPFPlanner.py  pyTaskScheduler.cpp  pyTaskScheduler.py  py_driver.bak  py_driver.cpp  set_track.bash  test.cpp  testlib.py
python/backup/track_all/: pyTaskScheduler.hpp
python/backup/track_planner/: pyTaskScheduler.hpp
python/backup/track_scheduler/: pyMAPFPlanner.cpp  pyMAPFPlanner.hpp
python/common/: MAPFbinding.cpp  opaque_types.h  pyEntry.hpp  pyEnvironment.hpp  pyExecutor.cpp  pyExecutor.hpp  pyMAPFPlanner.cpp  pyMAPFPlanner.hpp  pyTaskScheduler.cpp  pyTaskScheduler.hpp
python/default_planner/: pyMAPFPlanner.cpp  pyMAPFPlanner.hpp
python/default_scheduler/: pyTaskScheduler.cpp  pyTaskScheduler.hpp
python/user_executor/: pyExecutor.py
python/user_planner/: pyMAPFPlanner.cpp  pyMAPFPlanner.hpp  pyMAPFPlanner.py
python/user_scheduler/: pyTaskScheduler.cpp  pyTaskScheduler.hpp  pyTaskScheduler.py
sample_output/: PBS2_bad_result.conf  PBS2_bad_result.path  description.txt
src/: ActionModel.cpp  BasicSystem.cpp  CompetitionSystem.cpp  DelayGenerator.cpp  Entry.cpp  Evaluation.cpp  ExecutionSimulator.cpp  Executor.cpp  Grid.cpp  KivaSystem.cpp  LiveRobotCompetitionSystem.cpp  Logger.cpp  MAPFPlanner.cpp  Simulator.cpp  States.cpp  TaskManager.cpp  TaskScheduler.cpp  Validator.cpp  VisualizerRecorder.cpp  common.cpp  delayGenerator.cpp  driver.cpp
tests/: delay_generator_test.cpp  multi_step_plan_test.cpp  python_interface_test.cpp
utils/: plot_task_trend.py  upgrade_file_list.txt  upgrade_start_kit.py
visualizer/: README.md  index.html  styles.css  viewer.js
(+597 files in other folders)
